# try16

./: .gitignore  CMakeLists.txt  Makefile  README.ja.md  README.md  build.bat  main.c  platform.h  try16.c
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
